[gd_scene load_steps=26 format=2]

[ext_resource path="res://assets/kenney_tiny-dungeon/enemy_projectile.tres" type="Texture" id=1]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/Game.gd" type="Script" id=4]
[ext_resource path="res://scenes/BulletSpawner.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/Enemy.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/kenney_tiny-dungeon/tilemap_packed.png" type="Texture" id=7]
[ext_resource path="res://assets/kenney_tiny-dungeon/player_projectile.tres" type="Texture" id=8]
[ext_resource path="res://scripts/MapController.gd" type="Script" id=9]
[ext_resource path="res://materials/crt.gdshader" type="Shader" id=10]
[ext_resource path="res://scenes/Powerup.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/Bar.tscn" type="PackedScene" id=12]
[ext_resource path="res://assets/health.png" type="Texture" id=13]
[ext_resource path="res://materials/bar.gdshader" type="Shader" id=14]
[ext_resource path="res://assets/orb.png" type="Texture" id=15]
[ext_resource path="res://assets/font_small.tres" type="DynamicFont" id=16]

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="TileSet" id=1]
0/name = "Ground"
0/texture = ExtResource( 7 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 192, 80 )
0/tile_mode = 1
0/autotile/bitmask_mode = 2
0/autotile/bitmask_flags = [ Vector2( 0, 4 ), 511, Vector2( 1, 4 ), 511, Vector2( 2, 4 ), 504, Vector2( 3, 4 ), 504, Vector2( 4, 4 ), 216, Vector2( 5, 4 ), 510, Vector2( 6, 3 ), 511 ]
0/autotile/icon_coordinate = Vector2( 1, 4 )
0/autotile/tile_size = Vector2( 16, 16 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [ Vector3( 0, 0, 3 ), Vector3( 0, 4, 3 ) ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "Walls"
1/texture = ExtResource( 7 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 96, 64 )
1/tile_mode = 1
1/autotile/bitmask_mode = 2
1/autotile/bitmask_flags = [ Vector2( 4, 3 ), 511 ]
1/autotile/icon_coordinate = Vector2( 4, 3 )
1/autotile/tile_size = Vector2( 16, 16 )
1/autotile/spacing = 0
1/autotile/occluder_map = [  ]
1/autotile/navpoly_map = [  ]
1/autotile/priority_map = [  ]
1/autotile/z_index_map = [  ]
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 3 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 1, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0

[sub_resource type="ShaderMaterial" id=10]
shader = ExtResource( 14 )
shader_param/amount = 1.0
shader_param/color = Color( 0.211765, 0.211765, 0.211765, 1 )

[sub_resource type="ShaderMaterial" id=11]
shader = ExtResource( 14 )
shader_param/amount = 0.0
shader_param/color = Color( 0.211765, 0.211765, 0.211765, 1 )

[sub_resource type="ShaderMaterial" id=12]
shader = ExtResource( 14 )
shader_param/amount = 0.0
shader_param/color = Color( 1, 1, 1, 1 )

[sub_resource type="ShaderMaterial" id=9]
shader = ExtResource( 10 )

[node name="Game" type="Node2D"]
script = ExtResource( 4 )
enemies = [ ExtResource( 6 ) ]
powerups = [ ExtResource( 11 ) ]

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2( 4, 4 )
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -65538, 1, 196612, -65537, 1, 196612, -131072, 1, 196612, -131071, 1, 196612, -131070, 1, 196612, -131069, 1, 196612, -131068, 1, 196612, -131067, 1, 196612, -131066, 1, 196612, -131065, 1, 196612, -131064, 1, 196612, -131063, 1, 196612, -131062, 1, 196612, -131061, 1, 196612, -131060, 1, 196612, -131059, 1, 196612, -131058, 1, 196612, -131057, 1, 196612, -131056, 1, 196612, -131055, 1, 196612, -131054, 1, 196612, -131053, 1, 196612, -131052, 1, 196612, -131051, 1, 196612, -131050, 1, 196612, -2, 1, 196612, -1, 1, 196612, -65536, 1, 196612, -65535, 1, 196612, -65534, 1, 196612, -65533, 1, 196612, -65532, 1, 196612, -65531, 1, 196612, -65530, 1, 196612, -65529, 1, 196612, -65528, 1, 196612, -65527, 1, 196612, -65526, 1, 196612, -65525, 1, 196612, -65524, 1, 196612, -65523, 1, 196612, -65522, 1, 196612, -65521, 1, 196612, -65520, 1, 196612, -65519, 1, 196612, -65518, 1, 196612, -65517, 1, 196612, -65516, 1, 196612, -65515, 1, 196612, -65514, 1, 196612, 65534, 1, 196612, 65535, 1, 196612, 0, 0, 262145, 1, 0, 262146, 2, 0, 262147, 3, 0, 262147, 4, 0, 262146, 5, 0, 262147, 6, 0, 262146, 7, 0, 262146, 8, 0, 262146, 9, 0, 262146, 10, 0, 262147, 11, 0, 262146, 12, 0, 262146, 13, 0, 262147, 14, 0, 262146, 15, 0, 262146, 16, 0, 262146, 17, 0, 262146, 18, 0, 262146, 19, 0, 262147, 20, 0, 262148, 21, 1, 196612, 22, 1, 196612, 131070, 1, 196612, 131071, 1, 196612, 65536, 0, 262145, 65537, 0, 262144, 65538, 0, 196614, 65539, 0, 196614, 65540, 0, 262144, 65541, 0, 196614, 65542, 0, 262145, 65543, 0, 196614, 65544, 0, 262145, 65545, 0, 262144, 65546, 0, 262144, 65547, 0, 196614, 65548, 0, 262144, 65549, 0, 262144, 65550, 0, 262144, 65551, 0, 196614, 65552, 0, 262144, 65553, 0, 262145, 65554, 0, 262144, 65555, 0, 262144, 65556, 0, 262145, 65557, 1, 196612, 65558, 1, 196612, 196606, 1, 196612, 196607, 1, 196612, 131072, 0, 262145, 131073, 0, 196614, 131074, 0, 262144, 131075, 0, 262144, 131076, 0, 262144, 131077, 0, 196614, 131078, 0, 262145, 131079, 0, 196614, 131080, 0, 262144, 131081, 0, 262144, 131082, 0, 262144, 131083, 0, 196614, 131084, 0, 196614, 131085, 0, 262144, 131086, 0, 262144, 131087, 0, 262144, 131088, 0, 196614, 131089, 0, 262145, 131090, 0, 262145, 131091, 0, 262144, 131092, 0, 262145, 131093, 1, 196612, 131094, 1, 196612, 262142, 1, 196612, 262143, 1, 196612, 196608, 0, 262145, 196609, 0, 262144, 196610, 0, 262144, 196611, 0, 262145, 196612, 0, 262144, 196613, 0, 262145, 196614, 0, 196614, 196615, 0, 262144, 196616, 0, 262145, 196617, 0, 262144, 196618, 0, 262144, 196619, 0, 196614, 196620, 0, 262144, 196621, 0, 262144, 196622, 0, 262145, 196623, 0, 262144, 196624, 0, 262144, 196625, 0, 262144, 196626, 0, 262144, 196627, 0, 196614, 196628, 0, 262145, 196629, 1, 196612, 196630, 1, 196612, 327678, 1, 196612, 327679, 1, 196612, 262144, 0, 262145, 262145, 0, 262144, 262146, 0, 262144, 262147, 0, 262144, 262148, 0, 262144, 262149, 0, 262144, 262150, 0, 262144, 262151, 0, 262144, 262152, 0, 262145, 262153, 0, 262145, 262154, 0, 262144, 262155, 0, 262144, 262156, 0, 262144, 262157, 0, 262144, 262158, 0, 196614, 262159, 0, 262144, 262160, 0, 262145, 262161, 0, 262144, 262162, 0, 262144, 262163, 0, 196614, 262164, 0, 262145, 262165, 1, 196612, 262166, 1, 196612, 393214, 1, 196612, 393215, 1, 196612, 327680, 0, 262145, 327681, 0, 262145, 327682, 0, 196614, 327683, 0, 262144, 327684, 0, 262144, 327685, 0, 262145, 327686, 0, 262145, 327687, 0, 262144, 327688, 0, 262144, 327689, 0, 196614, 327690, 0, 262145, 327691, 0, 262145, 327692, 0, 262144, 327693, 0, 262144, 327694, 0, 262144, 327695, 0, 262144, 327696, 0, 262144, 327697, 0, 262144, 327698, 0, 262144, 327699, 0, 262144, 327700, 0, 262145, 327701, 1, 196612, 327702, 1, 196612, 458750, 1, 196612, 458751, 1, 196612, 393216, 0, 262145, 393217, 0, 262144, 393218, 0, 196614, 393219, 0, 262144, 393220, 0, 262144, 393221, 0, 262144, 393222, 0, 262145, 393223, 0, 262145, 393224, 0, 262144, 393225, 0, 262144, 393226, 0, 196614, 393227, 0, 262144, 393228, 0, 196614, 393229, 0, 262144, 393230, 0, 196614, 393231, 0, 196614, 393232, 0, 262145, 393233, 0, 262144, 393234, 0, 262144, 393235, 0, 262145, 393236, 0, 262145, 393237, 1, 196612, 393238, 1, 196612, 524286, 1, 196612, 524287, 1, 196612, 458752, 0, 262145, 458753, 0, 196614, 458754, 0, 262144, 458755, 0, 262145, 458756, 0, 262144, 458757, 0, 196614, 458758, 0, 262144, 458759, 0, 262144, 458760, 0, 262145, 458761, 0, 262145, 458762, 0, 262144, 458763, 0, 196614, 458764, 0, 262144, 458765, 0, 262144, 458766, 0, 262144, 458767, 0, 196614, 458768, 0, 262145, 458769, 0, 262145, 458770, 0, 262144, 458771, 0, 262144, 458772, 0, 262145, 458773, 1, 196612, 458774, 1, 196612, 589822, 1, 196612, 589823, 1, 196612, 524288, 0, 262145, 524289, 0, 262144, 524290, 0, 262144, 524291, 0, 262144, 524292, 0, 262145, 524293, 0, 262144, 524294, 0, 262145, 524295, 0, 262144, 524296, 0, 262144, 524297, 0, 262144, 524298, 0, 262145, 524299, 0, 262145, 524300, 0, 262144, 524301, 0, 196614, 524302, 0, 262144, 524303, 0, 262144, 524304, 0, 262144, 524305, 0, 262144, 524306, 0, 262144, 524307, 0, 262144, 524308, 0, 262145, 524309, 1, 196612, 524310, 1, 196612, 655358, 1, 196612, 655359, 1, 196612, 589824, 0, 262145, 589825, 0, 262144, 589826, 0, 262144, 589827, 0, 262144, 589828, 0, 262144, 589829, 0, 262144, 589830, 0, 262145, 589831, 0, 262144, 589832, 0, 196614, 589833, 0, 196614, 589834, 0, 196614, 589835, 0, 196614, 589836, 0, 262144, 589837, 0, 262145, 589838, 0, 262144, 589839, 0, 262145, 589840, 0, 262144, 589841, 0, 262144, 589842, 0, 262144, 589843, 0, 262144, 589844, 0, 262145, 589845, 1, 196612, 589846, 1, 196612, 720894, 1, 196612, 720895, 1, 196612, 655360, 0, 262145, 655361, 0, 262144, 655362, 0, 262144, 655363, 0, 262145, 655364, 0, 262144, 655365, 0, 262144, 655366, 0, 262145, 655367, 0, 262145, 655368, 0, 262145, 655369, 0, 196614, 655370, 0, 262144, 655371, 0, 262144, 655372, 0, 262144, 655373, 0, 262145, 655374, 0, 262145, 655375, 0, 262144, 655376, 0, 196614, 655377, 0, 262144, 655378, 0, 262145, 655379, 0, 262144, 655380, 0, 262145, 655381, 1, 196612, 655382, 1, 196612, 786430, 1, 196612, 786431, 1, 196612, 720896, 0, 262145, 720897, 0, 262145, 720898, 0, 262145, 720899, 0, 262144, 720900, 0, 196614, 720901, 0, 262144, 720902, 0, 196614, 720903, 0, 262144, 720904, 0, 262144, 720905, 0, 262144, 720906, 0, 262144, 720907, 0, 196614, 720908, 0, 262144, 720909, 0, 196614, 720910, 0, 196614, 720911, 0, 262144, 720912, 0, 262144, 720913, 0, 262144, 720914, 0, 262145, 720915, 0, 262144, 720916, 0, 262145, 720917, 1, 196612, 720918, 1, 196612, 851966, 1, 196612, 851967, 1, 196612, 786432, 0, 262145, 786433, 0, 262144, 786434, 0, 196614, 786435, 0, 262144, 786436, 0, 262144, 786437, 0, 196614, 786438, 0, 196614, 786439, 0, 262145, 786440, 0, 262144, 786441, 0, 262144, 786442, 0, 262144, 786443, 0, 262144, 786444, 0, 262144, 786445, 0, 262144, 786446, 0, 196614, 786447, 0, 262144, 786448, 0, 196614, 786449, 0, 262145, 786450, 0, 262144, 786451, 0, 262144, 786452, 0, 262145, 786453, 1, 196612, 786454, 1, 196612, 917502, 1, 196612, 917503, 1, 196612, 851968, 0, 262145, 851969, 0, 262144, 851970, 0, 262144, 851971, 0, 262145, 851972, 0, 196614, 851973, 0, 262144, 851974, 0, 262145, 851975, 0, 262144, 851976, 0, 196614, 851977, 0, 262144, 851978, 0, 262145, 851979, 0, 262144, 851980, 0, 262145, 851981, 0, 262144, 851982, 0, 262144, 851983, 0, 262144, 851984, 0, 262144, 851985, 0, 262144, 851986, 0, 262144, 851987, 0, 196614, 851988, 0, 262145, 851989, 1, 196612, 851990, 1, 196612, 983038, 1, 196612, 983039, 1, 196612, 917504, 0, 262145, 917505, 0, 262144, 917506, 0, 262144, 917507, 0, 262144, 917508, 0, 262144, 917509, 0, 262144, 917510, 0, 262144, 917511, 0, 262144, 917512, 0, 196614, 917513, 0, 262144, 917514, 0, 196614, 917515, 0, 262144, 917516, 0, 262145, 917517, 0, 262145, 917518, 0, 196614, 917519, 0, 262144, 917520, 0, 262144, 917521, 0, 262144, 917522, 0, 262144, 917523, 0, 262144, 917524, 0, 262145, 917525, 1, 196612, 917526, 1, 196612, 1048574, 1, 196612, 1048575, 1, 196612, 983040, 0, 262145, 983041, 0, 262144, 983042, 0, 262144, 983043, 0, 262144, 983044, 0, 262144, 983045, 0, 262144, 983046, 0, 262144, 983047, 0, 262145, 983048, 0, 262145, 983049, 0, 262144, 983050, 0, 262145, 983051, 0, 262144, 983052, 0, 262145, 983053, 0, 262144, 983054, 0, 196614, 983055, 0, 262144, 983056, 0, 262144, 983057, 0, 262144, 983058, 0, 262144, 983059, 0, 262145, 983060, 0, 262145, 983061, 1, 196612, 983062, 1, 196612, 1114110, 1, 196612, 1114111, 1, 196612, 1048576, 0, 262145, 1048577, 0, 262145, 1048578, 0, 262144, 1048579, 0, 196614, 1048580, 0, 196614, 1048581, 0, 262145, 1048582, 0, 262144, 1048583, 0, 262145, 1048584, 0, 262144, 1048585, 0, 262144, 1048586, 0, 262145, 1048587, 0, 262144, 1048588, 0, 262144, 1048589, 0, 262144, 1048590, 0, 196614, 1048591, 0, 262144, 1048592, 0, 262144, 1048593, 0, 262144, 1048594, 0, 262145, 1048595, 0, 262144, 1048596, 0, 262145, 1048597, 1, 196612, 1048598, 1, 196612, 1179646, 1, 196612, 1179647, 1, 196612, 1114112, 0, 262145, 1114113, 0, 196614, 1114114, 0, 196614, 1114115, 0, 196614, 1114116, 0, 262145, 1114117, 0, 262145, 1114118, 0, 262144, 1114119, 0, 262144, 1114120, 0, 196614, 1114121, 0, 262144, 1114122, 0, 196614, 1114123, 0, 262144, 1114124, 0, 262144, 1114125, 0, 262144, 1114126, 0, 262144, 1114127, 0, 262144, 1114128, 0, 262145, 1114129, 0, 262144, 1114130, 0, 262145, 1114131, 0, 262144, 1114132, 0, 262145, 1114133, 1, 196612, 1114134, 1, 196612, 1245182, 1, 196612, 1245183, 1, 196612, 1179648, 0, 262145, 1179649, 0, 196614, 1179650, 0, 262144, 1179651, 0, 262144, 1179652, 0, 262144, 1179653, 0, 262144, 1179654, 0, 262144, 1179655, 0, 262144, 1179656, 0, 262144, 1179657, 0, 262144, 1179658, 0, 262145, 1179659, 0, 262145, 1179660, 0, 262144, 1179661, 0, 262144, 1179662, 0, 262145, 1179663, 0, 262144, 1179664, 0, 196614, 1179665, 0, 262145, 1179666, 0, 262144, 1179667, 0, 262144, 1179668, 0, 262145, 1179669, 1, 196612, 1179670, 1, 196612, 1310718, 1, 196612, 1310719, 1, 196612, 1245184, 0, 262145, 1245185, 0, 262144, 1245186, 0, 262145, 1245187, 0, 262144, 1245188, 0, 262144, 1245189, 0, 262144, 1245190, 0, 262144, 1245191, 0, 262144, 1245192, 0, 262145, 1245193, 0, 262144, 1245194, 0, 196614, 1245195, 0, 262144, 1245196, 0, 262145, 1245197, 0, 262144, 1245198, 0, 262144, 1245199, 0, 262144, 1245200, 0, 262145, 1245201, 0, 262145, 1245202, 0, 196614, 1245203, 0, 262144, 1245204, 0, 262145, 1245205, 1, 196612, 1245206, 1, 196612, 1376254, 1, 196612, 1376255, 1, 196612, 1310720, 0, 262145, 1310721, 0, 262145, 1310722, 0, 262145, 1310723, 0, 262145, 1310724, 0, 262145, 1310725, 0, 262145, 1310726, 0, 262145, 1310727, 0, 262145, 1310728, 0, 262145, 1310729, 0, 262145, 1310730, 0, 262145, 1310731, 0, 262145, 1310732, 0, 262145, 1310733, 0, 262145, 1310734, 0, 262145, 1310735, 0, 262145, 1310736, 0, 262145, 1310737, 0, 262145, 1310738, 0, 262145, 1310739, 0, 262145, 1310740, 0, 262145, 1310741, 1, 196612, 1310742, 1, 196612, 1441790, 1, 196612, 1441791, 1, 196612, 1376256, 1, 196612, 1376257, 1, 196612, 1376258, 1, 196612, 1376259, 1, 196612, 1376260, 1, 196612, 1376261, 1, 196612, 1376262, 1, 196612, 1376263, 1, 196612, 1376264, 1, 196612, 1376265, 1, 196612, 1376266, 1, 196612, 1376267, 1, 196612, 1376268, 1, 196612, 1376269, 1, 196612, 1376270, 1, 196612, 1376271, 1, 196612, 1376272, 1, 196612, 1376273, 1, 196612, 1376274, 1, 196612, 1376275, 1, 196612, 1376276, 1, 196612, 1376277, 1, 196612, 1376278, 1, 196612, 1507326, 1, 196612, 1507327, 1, 196612, 1441792, 1, 196612, 1441793, 1, 196612, 1441794, 1, 196612, 1441795, 1, 196612, 1441796, 1, 196612, 1441797, 1, 196612, 1441798, 1, 196612, 1441799, 1, 196612, 1441800, 1, 196612, 1441801, 1, 196612, 1441802, 1, 196612, 1441803, 1, 196612, 1441804, 1, 196612, 1441805, 1, 196612, 1441806, 1, 196612, 1441807, 1, 196612, 1441808, 1, 196612, 1441809, 1, 196612, 1441810, 1, 196612, 1441811, 1, 196612, 1441812, 1, 196612, 1441813, 1, 196612, 1441814, 1, 196612 )
script = ExtResource( 9 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 354, 272 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true

[node name="PlayerBulletSpawner" parent="." instance=ExtResource( 5 )]
frames = [ ExtResource( 8 ) ]
spawner_path = NodePath("../Player")
layer = 8

[node name="EnemyBulletSpawner" parent="." instance=ExtResource( 5 )]
frames = [ ExtResource( 1 ) ]
layer = 16

[node name="EnemyGroup" type="Node2D" parent="."]

[node name="PowerupGroup" type="Node2D" parent="."]

[node name="GlitchGroup" type="Node2D" parent="."]

[node name="HUD" parent="." instance=ExtResource( 3 )]

[node name="BarShadow" parent="HUD" instance=ExtResource( 12 )]
material = SubResource( 10 )
margin_left = 107.0
margin_top = 83.0
margin_right = 292.0
margin_bottom = 118.0

[node name="Bar" parent="HUD" instance=ExtResource( 12 )]
margin_left = 100.0
margin_top = 75.0
margin_right = 285.0
margin_bottom = 110.0

[node name="HealthNumber" type="Label" parent="HUD"]
margin_left = 147.0
margin_top = 82.0
margin_right = 210.0
margin_bottom = 96.0
rect_scale = Vector2( 1.6, 1.6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
custom_fonts/font = ExtResource( 16 )
text = "20/20"
align = 1

[node name="XpBarShadow" parent="HUD" instance=ExtResource( 12 )]
material = SubResource( 11 )
margin_left = 592.0
margin_top = 546.0
margin_right = 992.0
margin_bottom = 581.0

[node name="XpBar" parent="HUD" instance=ExtResource( 12 )]
material = SubResource( 12 )
margin_left = 585.0
margin_top = 538.0
margin_right = 985.0
margin_bottom = 573.0

[node name="XpNumber" type="Label" parent="HUD"]
margin_left = 741.0
margin_top = 546.0
margin_right = 804.0
margin_bottom = 560.0
rect_scale = Vector2( 1.6, 1.6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
custom_fonts/font = ExtResource( 16 )
text = "00/20"
align = 1

[node name="OrbIcon" type="TextureRect" parent="HUD"]
margin_left = 547.0
margin_top = 542.0
margin_right = 563.0
margin_bottom = 558.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 15 )

[node name="HealthIcon" type="TextureRect" parent="HUD"]
margin_left = 61.0
margin_top = 78.0
margin_right = 77.0
margin_bottom = 94.0
rect_scale = Vector2( 2.3, 2.3 )
texture = ExtResource( 13 )

[node name="CrtEffect" type="ColorRect" parent="HUD"]
material = SubResource( 9 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 64.0
margin_bottom = 57.0
__meta__ = {
"_edit_lock_": true
}

[node name="TopLeft" type="Position2D" parent="."]
position = Vector2( -63, -61 )

[node name="BottomRight" type="Position2D" parent="."]
position = Vector2( 1403, 1404 )

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 20.0
autostart = true

[node name="GlitchTimer" type="Timer" parent="."]
wait_time = 15.0
autostart = true

[connection signal="clear_glitches" from="Player" to="." method="_on_Player_clear_glitches"]
[connection signal="gain_xp" from="Player" to="." method="_on_gain_xp"]
[connection signal="player_health" from="Player" to="." method="_on_player_health"]
[connection signal="shoot_bullet" from="Player" to="." method="_on_Player_shoot_bullet"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="timeout" from="GlitchTimer" to="." method="_on_GlitchTimer_timeout"]
